# Goal-Tracker

./: CMakeLists.txt  Plan.md  README.md
Goal Tracker/src/: main.cpp
Goal Tracker/src/app/: goal.cpp  goal.h  progressLog.cpp  progressLog.h
log/goalData/: goalData.txt
log/logData/: logData.txt
src/: CMakeLists.txt  main.cpp
src/app/: cli.cpp  cli.h  goal.cpp  goal.h  goalStorage.h  progressLog.cpp  progressLog.h
src/core/: goalStorage.cpp  goalStorage.h  main.cpp  progStorage.cpp  progStorage.h
src/log/goalData/: goalData.txt
src/log/logData/: logData.txt
